--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
         <a class = "skip" href="#skip">Skip to Main Content</a>
         <nav>
             <div class = "navbar">
-              <img class = "logoDesktopOnly" src="/images/logonew.png" alt="">
+              <img class = "logoDesktopOnly" src="images/logonew.png" alt="">
               <div class = "navlinks">
               <a href="index.html">home</a>
               <a href="about.html">about</a>
