--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
      
         <img src= "images/graduation.JPG" alt ="two women posing for a graudation picture doing funny faces">
 
-        <img src = "images/hummus.JPG" alt = "hummus topped with roasted and seasoned cauliflower">
+        <img src = "images/hummus.jpg" alt = "hummus topped with roasted and seasoned cauliflower">
 </div>
 
 </main>
