--- a/about.html
+++ b/about.html
@@ -66,11 +66,11 @@
 
         <img src= "images/hadenme.jpg" alt = "two women taking a selfie on a nature walk in the fall"> 
  
-        <img src= "images/tart.JPG" alt = "picture of a tart decorated with tomato and cheese on top"> 
+        <img src= "images/tart.jpg" alt = "picture of a tart decorated with tomato and cheese on top"> 
      
         <img src= "images/graduation.JPG" alt ="two women posing for a graudation picture doing funny faces">
 
-        <img src = "images/hummus.jpg" alt = "hummus topped with roasted and seasoned cauliflower">
+        <img src = "images/hummus.JPG" alt = "hummus topped with roasted and seasoned cauliflower">
 </div>
 
 </main>
